updates to project title; updated question lettering and numbering; made a few questions required which not previously

--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -9,8 +9,9 @@
 {% block body %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Citizen
-    Science Network</a>
+  <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">
+    Wisconsin Cover Crop Citizen Science Data Network
+  </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +72,9 @@
       <div class="card">
         <div class="card-body">
           <h1 class="card-title logo text-center">
-            <a href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop<br>Citizen Science Network</a>
+            <a href="{% url 'wisc_cc_home' %}">
+              Wisconsin Cover Crop<br>Citizen Science Data Network
+            </a>
           </h1>
         </div>
       </div>
@@ -112,5 +115,5 @@
 </h1>
 {% endblock %}
 {% block title %}
-Welcome to Wisconsin Growers Citizen Science Network
+Wisconsin Cover Crop Citizen Science Data Network
 {% endblock title %}
