--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -1,8 +1,6 @@
 {% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
 
-{% block title %}Wisconsin Cover Crop Citizen Science Network {% endblock %}
-
 {% block content %}
 <style>
   a p,
@@ -100,7 +98,8 @@
             rel="noopener noreferrer">the USDA Dairy Forage Research Center</a>, and
           UW-Madison's <a href="https://wicst.wisc.edu/" target="_blank" rel="noopener noreferrer">WICST project</a>.
           We are grateful to our collaborating Wisconsin farmers and to our
-          Soil Health Alliance for Research and Engagement (SHARE) project partners.
+          <a href="https://www.soilhealthalliance.net/" target="_blank" rel="noopener noreferrer">Soil Health Alliance
+            for Research and Engagement (SHARE)</a> project partners.
         </p>
 
 
