--- a/wisccc/templates/wisccc/wisc_cc_register_3.html
+++ b/wisccc/templates/wisccc/wisc_cc_register_3.html
@@ -19,7 +19,7 @@
                 <h5>Thank you {{ user.username }}!</h5>
 
                 <p class="card-text">
-                    Welcome! Thank you for joining the Wisconsin Cover Crop Citizen Science Network.
+                    Welcome! Thank you for joining the Wisconsin Cover Crop Citizen Science Data Network.
                     We will be in touch soon with more information on the survey and cover crop sampling,
                     both of which happen in the Fall.
                     Please reach out to Dan Marzu at
