--- a/wisccc/templates/wisccc/wisc_cc_map_embed.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_embed.html
@@ -13,7 +13,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Wisconsin Cover Crop Citizen Science Network{% endblock %}</title>
+    <title>Wisconsin Cover Crop Citizen Science Data Network</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
