--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -1,6 +1,5 @@
 {% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
-{% block title %}Wisconsin Cover Crop Citizen Science Network {% endblock %}
 
 {% block content %}
 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
@@ -11,9 +10,10 @@
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">Welcome {{ user.username }}</h3>
-        
-        {% if completed_1 and completed_2 and completed_3 and completed_4 and completed_5 and completed_6 and completed_7%}
-        
+
+        {% if completed_1 and completed_2 and completed_3 and completed_4 and completed_5 and completed_6 and
+        completed_7%}
+
         <h4>Thank you!</h4>
 
         <p>Thank you for completing our survey. If you would like to edit your answers, just click on one of the
