tidy to wisc home page

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -98,8 +98,9 @@
             rel="noopener noreferrer">the USDA Dairy Forage Research Center</a>, and
           UW-Madison's <a href="https://wicst.wisc.edu/" target="_blank" rel="noopener noreferrer">WICST project</a>.
           We are grateful to our collaborating Wisconsin farmers and to our
-          <a href="https://www.soilhealthalliance.net/" target="_blank" rel="noopener noreferrer">Soil Health Alliance
-            for Research and Engagement (SHARE)</a> project partners.
+          <a href="https://www.soilhealthalliance.net/" target="_blank" rel="noopener noreferrer">
+            Soil Health Alliance for Research and Engagement (SHARE)
+          </a> project partners.
         </p>
 
 
