grrr formatting the template!

--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -11,8 +11,7 @@
       <div class="card-body">
         <h3 class="card-title">Welcome {{ user.username }}</h3>
 
-        {% if completed_1 and completed_2 and completed_3 and completed_4 and completed_5 and completed_6 and
-        completed_7%}
+        {% if completed_1 and completed_2 and completed_3 and completed_4 and completed_5 and completed_6 %}
 
         <h4>Thank you!</h4>
 
