updated layout on home; tidied cover crop species entry

--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_surveyfield.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_surveyfield.html
@@ -40,6 +40,7 @@
     mix (up to 5 species) to the best of your ability.
     You can add more details in the text box below.
 </p>
+<h5>Cover crop 1</h5>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form_surveyfield_section_3.cover_crop_species_1|as_crispy_field }}
@@ -51,6 +52,7 @@
         {{ form_surveyfield_section_3.cover_crop_planting_rate_1_units|as_crispy_field }}
     </div>
 </div>
+<h5>Cover crop 2</h5>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form_surveyfield_section_3.cover_crop_species_2|as_crispy_field }}
@@ -62,6 +64,7 @@
         {{ form_surveyfield_section_3.cover_crop_planting_rate_2_units|as_crispy_field }}
     </div>
 </div>
+<h5>Cover crop 3</h5>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form_surveyfield_section_3.cover_crop_species_3|as_crispy_field }}
@@ -73,6 +76,7 @@
         {{ form_surveyfield_section_3.cover_crop_planting_rate_3_units|as_crispy_field }}
     </div>
 </div>
+<h5>Cover crop 4</h5>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form_surveyfield_section_3.cover_crop_species_4|as_crispy_field }}
@@ -84,6 +88,7 @@
         {{ form_surveyfield_section_3.cover_crop_planting_rate_4_units|as_crispy_field }}
     </div>
 </div>
+<h5>Cover crop 5</h5>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form_surveyfield_section_3.cover_crop_species_5|as_crispy_field }}
