updated survey 2024 review so new survey can be reviewed but now it will not work for 2023; restructured form names a bit; not yet finished the review process - there are still questions which are required and there is no confirmedaccurate field availalbe

--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_fieldfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_fieldfarm.html
@@ -3,20 +3,20 @@
 
 <!-- <div class="form-row">
     <div class="form-group col-md-4 mb-0">
-        {{ field_farm_full_form.field_name|as_crispy_field }}
+        {{ form_fieldfarm_section_3.field_name|as_crispy_field }}
     </div>
 </div> -->
 <div class="form-row">
     <div class="form-group col-md-6 mb-0">
-        {{ field_farm_full_form.closest_zip_code|as_crispy_field }}
+        {{ form_fieldfarm_section_3.closest_zip_code|as_crispy_field }}
     </div>
     <div class="form-group col-md-6 mb-0">
-        {{ field_farm_full_form.field_acreage|as_crispy_field }}
+        {{ form_fieldfarm_section_3.field_acreage|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
     <div class="form-group col-md-10 mb-0">
-        {{ field_farm_full_form.field_location|as_crispy_field }}
+        {{ form_fieldfarm_section_3.field_location|as_crispy_field }}
     </div>
 </div>
-{{ field_farm_full_form.errors }}
+{{ form_fieldfarm_section_3.errors }}
