--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_7_final_thoughts_surveyfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_7_final_thoughts_surveyfarm.html
@@ -2,21 +2,21 @@
 
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ survey_farm_form.encourage_cc|as_crispy_field }}
+        {{ form_surveyfarm_section_7.encourage_cc|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ survey_farm_form.encourage_cc_write_in|as_crispy_field }}
+        {{ form_surveyfarm_section_7.encourage_cc_write_in|as_crispy_field }}
     </div>
 </div>
 
 <div>
     <div class="form-row">
         <div class="form-group col-md-12 mb-0">
-            {{ survey_farm_form.additional_thoughts|as_crispy_field }}
+            {{ form_surveyfarm_section_7.additional_thoughts|as_crispy_field }}
         </div>
     </div>
 </div>
 
-{{ survey_farm_form.errors}}
+{{ form_surveyfarm_section_7.errors}}
