--- a/wisccc/templates/wisccc/survey_section_1_farmer.html
+++ b/wisccc/templates/wisccc/survey_section_1_farmer.html
@@ -9,7 +9,7 @@
 {% block form %}
 
 <head>
-  {{ farmer_form.media }}
+  {{ form_farmer.media }}
 </head>
 <script>
   //https://stackoverflow.com/questions/140460/client-js-framework-for-unsaved-data-protection
