--- a/wisccc/templates/wisccc/survey_section_2_goals_support.html
+++ b/wisccc/templates/wisccc/survey_section_2_goals_support.html
@@ -9,7 +9,7 @@
 {% block form %}
 
 <head>
-  {{ form.media }}
+  {{ form_surveyfarm_section_2.media }}
 </head>
 
 <h3 class="card-title">II. Cover cropping goals & support</h3>
