--- a/wisccc/templates/wisccc/survey_section_4_field_planting_dates_timing.html
+++ b/wisccc/templates/wisccc/survey_section_4_field_planting_dates_timing.html
@@ -9,7 +9,7 @@
 {% block form %}
 
 <head>
-  {{ field_farm_form.media }}
+  {{ form_surveyfarm_section_4.media }}
 </head>
 
 <h3 class="card-title">IV. Research Field: Planting dates & timing</h3>
