--- a/wisccc/templates/wisccc/survey_section_5_field_tillage_manure_soil.html
+++ b/wisccc/templates/wisccc/survey_section_5_field_tillage_manure_soil.html
@@ -9,7 +9,7 @@
 {% block form %}
 
 <head>
-  {{ field_farm_form.media }}
+  {{ form_surveyfield_section_5.media }}
 </head>
 
 <h3 class="card-title">V. Research Field: Manure, tillage, soil conditions</h3>
