--- a/wisccc/templates/wisccc/survey_section_6_field_seeding_cost.html
+++ b/wisccc/templates/wisccc/survey_section_6_field_seeding_cost.html
@@ -9,7 +9,7 @@
 {% block form %}
 
 <head>
-  {{ field_farm_form.media }}
+  {{ form_surveyfarm_section_6.media }}
 </head>
 
 <h3 class="card-title">VI. Research Field: Cover crop seeding & cost</h3>
