--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_2_goals_support_surveyfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_2_goals_support_surveyfarm.html
@@ -2,32 +2,32 @@
 
 <div class="form-row">
     <div class="form-group col-md-6 mb-0">
-        {{ form.total_acres|as_crispy_field }}
+        {{ form_surveyfarm_section_2.total_acres|as_crispy_field }}
     </div>
     <div class="form-group col-md-6 mb-0">
-        {{ form.percent_of_farm_cc|as_crispy_field }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-6 mb-0">
-        {{ form.years_experience|as_crispy_field }}
-    </div>
-</div>
-
-<div class="form-row">
-    <div class="form-group col-md-6 mb-0">
-        {{ form.main_cc_goal_this_year|as_crispy_field }}
-    </div>
-    <div class="form-group col-md-6 mb-0">
-        {{ form.satisfied_with_cc_results|as_crispy_field }}
+        {{ form_surveyfarm_section_2.percent_of_farm_cc|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
     <div class="form-group col-md-6 mb-0">
-        {{ form.barriers_to_expansion|as_crispy_field }}
+        {{ form_surveyfarm_section_2.years_experience|as_crispy_field }}
+    </div>
+</div>
+
+<div class="form-row">
+    <div class="form-group col-md-6 mb-0">
+        {{ form_surveyfarm_section_2.main_cc_goal_this_year|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-6 mb-0">
+        {{ form_surveyfarm_section_2.satisfied_with_cc_results|as_crispy_field }}
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-6 mb-0">
+        {{ form_surveyfarm_section_2.barriers_to_expansion|as_crispy_field }}
     </div>
     <div class="form-group col-md-12 mb-0">
-        {{ form.barriers_to_expansion_write_in|as_crispy_field }}
+        {{ form_surveyfarm_section_2.barriers_to_expansion_write_in|as_crispy_field }}
     </div>
 </div>
 
@@ -35,32 +35,32 @@
 
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ form.info_source_cover_crops_1|as_crispy_field }}
+        {{ form_surveyfarm_section_2.info_source_cover_crops_1|as_crispy_field }}
     </div>
 </div>
 
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ form.biggest_challenge_cc|as_crispy_field }}
+        {{ form_surveyfarm_section_2.biggest_challenge_cc|as_crispy_field }}
     </div>
 </div>
 
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ form.learning_history_cc|as_crispy_field }}
+        {{ form_surveyfarm_section_2.learning_history_cc|as_crispy_field }}
     </div>
 </div>
 
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ form.if_use_crop_insurance|as_crispy_field }}
+        {{ form_surveyfarm_section_2.if_use_crop_insurance|as_crispy_field }}
     </div>
 </div>
 
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ form.conservation_programs|as_crispy_field }}
+        {{ form_surveyfarm_section_2.conservation_programs|as_crispy_field }}
     </div>
 </div>
 
-{{ form.errors }}
+{{ form_surveyfarm_section_2.errors }}
