--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_6_seeding_cost_surveyfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_6_seeding_cost_surveyfarm.html
@@ -4,10 +4,10 @@
 
     <div class="form-row">
         <div class="form-group col-md-4 mb-0">
-            {{ form_survey_farm.save_cover_crop_seed|as_crispy_field }}
+            {{ form_surveyfarm_section_6.save_cover_crop_seed|as_crispy_field }}
         </div>
         <div class="form-group col-md-8 mb-0">
-            {{ form_survey_farm.source_cover_crop_seed|as_crispy_field }}
+            {{ form_surveyfarm_section_6.source_cover_crop_seed|as_crispy_field }}
         </div>
     </div>
 </div>
