--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_6_seeding_cost_surveyfield.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_6_seeding_cost_surveyfield.html
@@ -6,21 +6,21 @@
 
     <div class="form-row">
         <div class="form-group col-md-8 mb-0">
-            {{ form_survey_field.cover_crop_seeding_method|as_crispy_field }}
+            {{ form_surveyfield_section_6.cover_crop_seeding_method|as_crispy_field }}
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-12 mb-0">
-            {{ form_survey_field.cover_crop_seeding_method_write_in|as_crispy_field }}
+            {{ form_surveyfield_section_6.cover_crop_seeding_method_write_in|as_crispy_field }}
         </div>
     </div>
 
     <div class="form-row">
         <div class="form-group col-md-5 mb-0">
-            {{ form_survey_field.cover_crop_seed_cost|as_crispy_field }}
+            {{ form_surveyfield_section_6.cover_crop_seed_cost|as_crispy_field }}
         </div>
         <div class="form-group col-md-7 mb-0">
-            {{ form_survey_field.cover_crop_planting_cost|as_crispy_field }}
+            {{ form_surveyfield_section_6.cover_crop_planting_cost|as_crispy_field }}
         </div>
     </div>
 </div>
