--- a/wisccc/templates/wisccc/survey_section_3_field_rotation_rates.html
+++ b/wisccc/templates/wisccc/survey_section_3_field_rotation_rates.html
@@ -9,7 +9,7 @@
 {% block form %}
 
 <head>
-  {{ field_farm_full_form.media }}
+  {{ form_fieldfarm_section_3.media }}
 </head>
 
 <h3 class="card-title">III. Research Field: Crop rotation and planting rates</h3>
