--- a/wisccc/templates/wisccc/survey_section_7_final_thoughts.html
+++ b/wisccc/templates/wisccc/survey_section_7_final_thoughts.html
@@ -9,7 +9,7 @@
 {% block form %}
 
 <head>
-  {{ form.media }}
+  {{ form_surveyfarm_section_7.media }}
 </head>
 
 <h3 class="card-title">VII. Final thoughts</h3>
