working collaboration functionality implemented!

--- a/wisccc/templates/wisccc/wisc_cc_create_researcher.html
+++ b/wisccc/templates/wisccc/wisc_cc_create_researcher.html
@@ -17,7 +17,9 @@
             <div class="card-body">
 
                 <h5>Create new researcher collaborator</h5>
-
+                <a class="btn btn-info btn-sm" href="#">
+                    Create new collaborator from existing user
+                </a>
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <hr>
