--- a/wisccc/templates/wisccc/wisc_cc_manager_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_manager_home.html
@@ -29,6 +29,14 @@
                                     Add researcher
                                 </a>
                             </div>
+                            <div class="card-body">
+                                <p class="card-text">
+                                    View collaborating researchers
+                                </p>
+                                <a href="{% url 'researcher_table' %}" class="btn btn-primary">
+                                    Go to table
+                                </a>
+                            </div>
                         </div>
                         <div class="card">
                             <div class="card-header">
