--- a/wisccc/templates/wisccc/includes/survey_2023/form_survey_part_2_fieldfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2023/form_survey_part_2_fieldfarm.html
@@ -13,20 +13,15 @@
 
     <div class="form-row">
         <div class="form-group col-md-4 mb-0">
-            {{ field_farm_form.field_name|as_crispy_field }}
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-4 mb-0">
-            {{ field_farm_form.closest_zip_code|as_crispy_field }}
+            {{ form_fieldfarm_section_2.closest_zip_code|as_crispy_field }}
         </div>
         <div class="form-group col-md-4 mb-0">
-            {{ field_farm_form.field_acreage|as_crispy_field }}
+            {{ form_fieldfarm_section_2.field_acreage|as_crispy_field }}
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-10 mb-0">
-            {{ field_farm_form.field_location|as_crispy_field }}
+            {{ form_fieldfarm_section_2.field_location|as_crispy_field }}
         </div>
     </div>
 
