--- a/wisccc/templates/wisccc/includes/survey_2023/form_survey_part_2_surveyfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2023/form_survey_part_2_surveyfarm.html
@@ -3,15 +3,15 @@
 <div>
     <div class="form-row">
         <div class="form-group col-md-8 mb-0">
-            {{ survey_farm_form.cover_crops_delay_cash_crop|as_crispy_field }}
+            {{ form_surveyfarm_section_2.cover_crops_delay_cash_crop|as_crispy_field }}
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-4 mb-0">
-            {{ survey_farm_form.save_cover_crop_seed|as_crispy_field }}
+            {{ form_surveyfarm_section_2.save_cover_crop_seed|as_crispy_field }}
         </div>
         <div class="form-group col-md-8 mb-0">
-            {{ survey_farm_form.source_cover_crop_seed|as_crispy_field }}
+            {{ form_surveyfarm_section_2.source_cover_crop_seed|as_crispy_field }}
         </div>
     </div>
 </div>
