--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     crossorigin="anonymous"></script>
 
   {% block stylesheet %}{% endblock %}
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 
 <body>
