--- a/wisccc/templates/wisccc/wisc_cc_signup.html
+++ b/wisccc/templates/wisccc/wisc_cc_signup.html
@@ -9,16 +9,33 @@
     }
 </style>
 
+<head>
+    {{ form.media }}
+</head>
 <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card">
             <div class="card-body">
+                <script type="text/javascript">
+                    $(function () {
+                        // Grab turnstile value
+                        $('.noprompt-required').click(
+                            function () { populateTurnstileField(); });
+
+                        function populateTurnstileField() {
+                            var response_val = $("input[name=cf-turnstile-response]").val();
+                            $('#id_turnstile').val(response_val);
+                        }
+
+                    });
+
+                </script>
                 <h5>Sign up</h5>
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
 
                     {% include 'wisccc/includes/form_wisc_signup.html' %}
-
+                    <div class="cf-turnstile" data-sitekey="0x4AAAAAAAju8QRpruOM5bky"></div>
                     <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
                     <a href="{% url 'wisc_cc_survey' %}">
                         <button type="button" class="warn btn btn-secondary">
