--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -3,19 +3,23 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block content %}
-  <div class="row justify-content-center">
-    <div class="col-lg-4 col-md-6 col-sm-8">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Reset your password</h3>
-          <p>Enter your email address and we will send you a link to reset your password.</p>
-          <form method="post" novalidate>
-            {% csrf_token %}
-            {% include 'includes/form.html' %}
-            <button type="submit" class="btn btn-primary btn-block">Send password reset email</button>
-          </form>
-        </div>
+<div class="row justify-content-center">
+  <div class="col-lg-4 col-md-6 col-sm-8">
+    <div class="card">
+      <div class="card-body">
+        <h3 class="card-title">Reset your password</h3>
+        <p>Due to spam issues, we have had to temporarily suspend the password reset feature.</p>
+        <p>
+          Please reach out to Dave Evans
+          <a href="mailto:evans.dave.michael@gmail.com">
+            evans.dave.michael@gmail.com
+          </a>
+          For getting your password reset.
+        </p>
+        <p>Our apologies for this disruption.</p>
+
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
