--- a/wisccc/templates/wisccc/wisc_cc_map_embed.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_embed.html
@@ -194,8 +194,17 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 
 
         var biomass_val = feature.properties.cc_biomass;
-
         var biomass_val = (biomass_val === null) ? null : roundUp(feature.properties.cc_biomass, 2);
+        var spring_biomass_val = feature.properties.spring_cc_biomass;
+        var spring_biomass_val = (spring_biomass_val === null) ? null : roundUp(feature.properties.spring_cc_biomass, 2);
+        var image_1 = ""
+        var image_2 = ""
+        if (feature.properties.image_1_url != null) {
+            image_1 = "<dt>" + feature.properties.caption_photo_1 + "</dt> <dd>" + '<img src="' + feature.properties.image_1_url + '" width="250" height="250">' + "</dd>"
+        }
+        if (feature.properties.image_2_url != null) {
+            image_2 = "<dt>" + feature.properties.caption_photo_2 + "</dt> <dd>" + '<img src="' + feature.properties.image_2_url + '" width="250" height="250">' + "</dd>"
+        }
         var popupContent = "<dl>" +
             // "<dt>ID</dt> <dd>" + feature.id + "</dd>" +
             "<dt>Cover crops</dt> <dd>" + feature.properties.cc_species_raw + "</dd>" +
@@ -204,9 +213,15 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
             "<dt>Previous crop</dt> <dd>" + feature.properties.previous_crop.toLowerCase().replace("_", " ") + "</dd>" +
             "<dt>Planting date</dt> <dd>" + planting_date + "</dd>" +
             "<dt>Dominant soil texture</dt> <dd>" + feature.properties.dominant_soil_texture + "</dd>" +
-            "<dt>Biomass (ton DM/acre)</dt> <dd>" + biomass_val + "</dd>" +
-            "<dt>Cumulative growing degree units</dt> <dd>" + feature.properties.acc_gdd + "</dd>" +
+            "<dt>Fall Biomass (ton DM/acre)</dt> <dd>" + biomass_val + "</dd>" +
+            "<dt>Fall Cumulative growing degree units</dt> <dd>" + feature.properties.acc_gdd + "</dd>" +
+            "<dt>Spring Cumulative GDU </dt> <dd>" + feature.properties.spring_acc_gdd + "</dd>" +
+            "<dt>Spring Biomass (ton DM/acre)</dt> <dd>" + spring_biomass_val + "</dd>" +
+
+            image_1 +
+            image_2 +
             "</dl>" +
+
             "Locations have been obscured to protect landowner's privacy.";
 
 
