misc tweaks to wording

--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -10,11 +10,8 @@
         <h3 class="card-title">Reset your password</h3>
         <p>Due to spam issues, we have had to temporarily suspend the password reset feature.</p>
         <p>
-          Please reach out to Dave Evans
-          <a href="mailto:evans.dave.michael@gmail.com">
-            evans.dave.michael@gmail.com
-          </a>
-          For getting your password reset.
+          Please reach out to <a href="mailto:mingram@wisc.edu">Mrill Ingram </a>
+          for getting your password reset.
         </p>
         <p>Our apologies for this disruption.</p>
 
