--- a/wisccc/templates/wisccc/wisc_cc_manager_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_manager_home.html
@@ -21,9 +21,9 @@
                                 Download Data
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Download full survey questions</h5>
-                                <p class="card-text">This dataset currently only contains 2023 survey data, but the full
-                                    set of questions.
+                                <h5 class="card-title">Download Survey Results</h5>
+                                <p class="card-text">
+                                    This dataset contains survey data from all years of the survey.
                                     Also contains lab data.</p>
                                 <a href="{% url 'wisccc_download_data' 1 %}" class="btn btn-primary">Download</a>
                             </div>
