--- a/wisccc/templates/wisccc/wisc_cc_register_1.html
+++ b/wisccc/templates/wisccc/wisc_cc_register_1.html
@@ -38,6 +38,10 @@
                     <a href="mailto:mingram@wisc.edu">mingram@wisc.edu</a> with any questions.
 
                 </p>
+                <p>
+                    If you have any trouble registering or would like assistance
+                    registering please email Mrill Ingram at <a href="mailto:mingram@wisc.edu">mingram@wisc.edu</a>.
+                </p>
 
                 {% block register_1 %}
                 {% endblock register_1 %}
