--- a/wisccc/templates/wisccc/includes/form_wisc_signup.html
+++ b/wisccc/templates/wisccc/includes/form_wisc_signup.html
@@ -53,6 +53,6 @@
 </div>
 <div class="form-group">
 
-    {% render_field form.turnstile class=form.turnstile|input_class %}
+    {{ form.turnstile }}
 
 </div>
