--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -8,12 +8,12 @@
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">Reset your password</h3>
-        <p>Due to spam issues, we have had to temporarily suspend the password reset feature.</p>
-        <p>
-          Please reach out to <a href="mailto:mingram@wisc.edu">Mrill Ingram </a>
-          for getting your password reset.
-        </p>
-        <p>Our apologies for this disruption.</p>
+        <p>Enter your email address and we will send you a link to reset your password.</p>
+        <form method="post" novalidate>
+          {% csrf_token %}
+          {% include 'includes/form.html' %}
+          <button type="submit" class="btn btn-primary btn-block">Send password reset email</button>
+        </form>
 
       </div>
     </div>
