tweak to download language

--- a/wisccc/templates/wisccc/wisc_cc_manager_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_manager_home.html
@@ -56,7 +56,8 @@
                                 <h5 class="card-title">Shareable Data File</h5>
                                 <p class="card-text">
                                     This file includes metadata and a download of agronomic and lab data used to create
-                                    the map display. Contains no personal information. Share this file.
+                                    the map display. Contains no personal information.
+                                    This file is what collaborating researchers are able to download.
 
                                 </p>
                                 <a href="{% url 'wisccc_download_data' 2 %}" class="btn btn-primary">Download</a>
