made all data downloads have rando locations; closed registration; updated language about survey

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -713,13 +713,13 @@
         var model_data = [];
 
         d3.json(dataurl, function (data) {
-            submission_data = data;
+            // submission_data = data;
             // For tooltip
             var div = d3.select("body").append("div")
                 .attr("class", "tooltip")
                 .style("opacity", 0);
 
-            var min_year = d3.min(submission_data.map(function (child) {
+            var min_year = d3.min(data.map(function (child) {
                 return child.properties["year"]
             }))
             // Converting dates to times
@@ -775,8 +775,8 @@
 
             // Hack to limit the graphs to just 2020 and 2021 (years flattened so just need  == 2020)
             // data = data.filter(function (d) { return d.properties.cc_planting_date_flat.getFullYear() == 2020 })
-            submission_data = data.filter(function (el) { return el.properties.cc_biomass != null });
-            submission_data = submission_data.filter(function (el) { return el.properties.cc_species_raw != null });
+            data = data.filter(function (el) { return el.properties.cc_biomass != null });
+            data = data.filter(function (el) { return el.properties.cc_species_raw != null });
             var pop_selectize_box = function (geojson_data, id_selector, field_name) {
                 var all_instances = [];
                 for (item in geojson_data) {
@@ -877,7 +877,7 @@
                     valueField: "value",
                     labelField: "label",
                     searchField: ["value", "label"],
-                    options: pop_selectize_box(submission_data, id_selector, target_field),
+                    options: pop_selectize_box(data, id_selector, target_field),
                     onChange: function (value, isOnInitialize) {
                         updateChart(false)
                         updateHelpTipText()
