--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -4,7 +4,7 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href="{% static 'css/wisccc.css' %}">
-{% endblock %}
+{% endblock stylesheet%}
 
 {% block body %}
 
