--- a/wisccc/templates/wisccc/wisc_cc_register_by_mgmt.html
+++ b/wisccc/templates/wisccc/wisc_cc_register_by_mgmt.html
@@ -1,6 +1,9 @@
 {% extends 'wisccc/base_survey.html' %}
 
 {% load static %}
+{% block scripts %}
+<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+{% endblock scripts %}
 {% load crispy_forms_tags %}
 
 
