forgot to update link

--- a/wisccc/templates/wisccc/researcher_table.html
+++ b/wisccc/templates/wisccc/researcher_table.html
@@ -22,7 +22,7 @@
       <div class="card-body">
         <h3 class="card-title">Collaborating researchers</h3>
         <h7 class="card-title">
-          <span><a href="{% url 'download_registrants' %}">Download list</a></span>
+          <span><a href="{% url 'download_researchers' %}">Download list</a></span>
         </h7>
         <div class="col-md-12">
           {% render_table table %}
