added new field for consenting to privacy statement; added wording to registration form about privacy statement

--- a/wisccc/templates/wisccc/includes/form_registration_full.html
+++ b/wisccc/templates/wisccc/includes/form_registration_full.html
@@ -33,4 +33,9 @@
         {{ registration_form.notes|as_crispy_field }}
     </div>
 </div>
+<div class="form-row">
+    <div class="form-group col-md-10 mb-0">
+        {{ registration_form.privacy_consent|as_crispy_field }}
+    </div>
+</div>
 {{ registration_form.errors}}
