added link to privacy statement; updated privacy language

--- a/wisccc/templates/wisccc/includes/form_registration_partial.html
+++ b/wisccc/templates/wisccc/includes/form_registration_partial.html
@@ -39,8 +39,7 @@
     </li>
     <li>
         We share aggregated cover crop agronomic data with educators and researchers but field locations are anonymized
-        and all field information you provide is stored securely and will never be associated with any contact
-        information.
+        and all field information you provide is stored securely.
     </li>
     <li>
         We'll provide you cover crop lab results specific to your farm as well as a summary of statewide findings.
