--- a/wisccc/templates/wisccc/wisc_cc_about.html
+++ b/wisccc/templates/wisccc/wisc_cc_about.html
@@ -87,6 +87,11 @@
                         $100 honorarium as well as their personal biomass estimates and
                         nutrient information.
                     </p>
+                    <p>
+                        View our confidentiality statement <a
+                            href="https://docs.google.com/document/d/1PkCmpdHs_7nqd-kBTsdpq6fGkciDX8lZpaQ2Xh_NN-Y/edit?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">here</a>.
+                    </p>
                 </div>
 
             </div>
